[FIX] SonarCloud Issues